# jupyter-notebooks

./: .gitignore  LICENSE  README.md  client.py  notebook.proto  pyproject.toml  server.py
config/: db_env.py
jupyter_notebook_protobuf/: client.py  notebook.proto  server.py
jupyter_notebook_protobuf/config/: __init__.py  db_env.py  redis_env.py
jupyter_notebook_protobuf/models/: base.py  cells.py  notebooks.py
jupyter_notebook_protobuf/tests/: test_server.py
models/: __init__.py  cells.py  notebooks.py
